--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "tsc && node dist/src/index.js",
-    "benchmark": "tsc && node dist/benchmark/benchmark.js"
+    "benchmark": "tsc && node dist/benchmark/benchmark.js",
+    "test": "tsc && node --test dist/tests"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
